added modals to images

--- a/framework/bootstrap_example.html
+++ b/framework/bootstrap_example.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascript/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -37,22 +39,73 @@
     </div>
     <div class="row text-center">
       <div class="col-md-4">
-        <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder">
+        <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project1">
         <h3 class="text-uppercase">Appify</h3>
         <p>https://github.com/patsand24</p>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder">
+        <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project2">
         <h3 class="text-uppercase">Sunflower</h3>
         <p>https://github.com/patsand24</p>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder">
+        <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project3">
         <h3 class="text-uppercase">Bokeh</h3>
         <p>https://github.com/patsand24</p>
       </div>
     </div>
   </div>
 
+  <!-- Modal -->
+   <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+       <div class="modal-dialog">
+           <div class="modal-content">
+               <div class="modal-header">
+                   <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+               </div>
+               <div class="modal-body">
+                   <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder">
+                   This was my first project in this class. I learned a lot about HTML and CSS.
+               </div>
+               <div class="modal-footer">
+                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+               </div>
+           </div>
+       </div>
+   </div>
+   <!-- Modal -->
+    <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                </div>
+                <div class="modal-body">
+                    <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder">
+                    This was my first project in this class. I learned a lot about HTML and CSS.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+     <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+         <div class="modal-dialog">
+             <div class="modal-content">
+                 <div class="modal-header">
+                     <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                 </div>
+                 <div class="modal-body">
+                     <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder">
+                     This was my first project in this class. I learned a lot about HTML and CSS.
+                 </div>
+                 <div class="modal-footer">
+                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                 </div>
+             </div>
+         </div>
+     </div>
 </body>
 </html>
