--- a/framework/bootstrap_example.html
+++ b/framework/bootstrap_example.html
@@ -39,7 +39,7 @@
     </div>
     <div class="row text-center">
       <div class="col-md-4">
-        <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project1">
+        <img class="img-responsive imgbox" src="https://res.cloudinary.com/www-vetclass-nl/image/upload/t_detail_page/v1/pages/d5588f859664407eab2b791593e8629d.jpg" alt="puppy" data-toggle="modal" data-target="#project1">
         <h3 class="text-uppercase">Appify</h3>
         <p>https://github.com/patsand24</p>
       </div>
@@ -64,7 +64,7 @@
                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
                </div>
                <div class="modal-body">
-                   <img class="img-responsive" src="http://placehold.it/555x300" alt="placeholder">
+                   <img class="img-responsive" src="https://res.cloudinary.com/www-vetclass-nl/image/upload/t_detail_page/v1/pages/d5588f859664407eab2b791593e8629d.jpg" alt="puppy">
                    This was my first project in this class. I learned a lot about HTML and CSS.
                </div>
                <div class="modal-footer">
