replaced link placeholders with working links

--- a/framework/bootstrap_example.html
+++ b/framework/bootstrap_example.html
@@ -41,17 +41,17 @@
       <div class="col-md-4">
         <img class="img-responsive imgbox" src="https://res.cloudinary.com/www-vetclass-nl/image/upload/t_detail_page/v1/pages/d5588f859664407eab2b791593e8629d.jpg" alt="puppy" data-toggle="modal" data-target="#project1">
         <h3 class="text-uppercase">Appify</h3>
-        <p>https://github.com/patsand24</p>
+        <a href="https://github.com/patsand24">https://github.com/patsand24</a>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive" src="https://drscdn.500px.org/photo/48611784/q%3D80_h%3D300/072ef5f89a630dc79b40c1489d1ea3bf" alt="sunflower" data-toggle="modal" data-target="#project2">
+        <img class="img-responsive imgbox" src="https://drscdn.500px.org/photo/48611784/q%3D80_h%3D300/072ef5f89a630dc79b40c1489d1ea3bf" alt="sunflower" data-toggle="modal" data-target="#project2">
         <h3 class="text-uppercase">Sunflower</h3>
-        <p>https://github.com/patsand24</p>
+        <a href="https://github.com/patsand24">https://github.com/patsand24</a>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive" src="https://drscdn.500px.org/photo/183992833/q%3D80_h%3D300/29a31d3ae4f94bc040c3428f37f0e294" alt="fjord" data-toggle="modal" data-target="#project3">
+        <img class="img-responsive imgbox" src="https://drscdn.500px.org/photo/183992833/q%3D80_h%3D300/29a31d3ae4f94bc040c3428f37f0e294" alt="fjord" data-toggle="modal" data-target="#project3">
         <h3 class="text-uppercase">Bokeh</h3>
-        <p>https://github.com/patsand24</p>
+        <a href="https://github.com/patsand24">https://github.com/patsand24</a>
       </div>
     </div>
   </div>
