added img gallery and updated link to proper github page

--- a/framework/bootstrap_example.html
+++ b/framework/bootstrap_example.html
@@ -17,7 +17,7 @@
       <div class="col-md-6">
         <img class="title-logo" src="http://c6.la4.download.9appsinstall.com:7080/group1/M01/9E/6C/qYYBAFgpYz-ATPfMAAAIQ0fNInQ111.png" alt="logo">
       </div>
-      <div class="col-md-6 text-right text-uppercase">
+      <div id="heading" class="col-md-6 text-right text-uppercase">
         <h1 class="title-super text-thin">Jane Austin</h1>
         <h4>Front End Developer</h4>
       </div>
@@ -39,9 +39,9 @@
     </div>
     <div class="row text-center">
       <div class="col-md-4">
-        <img class="img-responsive imgbox" src="https://res.cloudinary.com/www-vetclass-nl/image/upload/t_detail_page/v1/pages/d5588f859664407eab2b791593e8629d.jpg" alt="puppy" data-toggle="modal" data-target="#project1">
-        <h3 class="text-uppercase">Appify</h3>
-        <a href="https://github.com/patsand24">https://github.com/patsand24</a>
+        <img class="img-responsive imgbox" src="img/project1.png" alt="movie_trailer_project" data-toggle="modal" data-target="#project1">
+        <h3 class="text-uppercase">Movie Trailer Project</h3>
+        <a href="https://github.com/patsand24/movie_trailer_site">hhttps://github.com/patsand24/movie_trailer_site</a>
       </div>
       <div class="col-md-4">
         <img class="img-responsive imgbox" src="https://drscdn.500px.org/photo/48611784/q%3D80_h%3D300/072ef5f89a630dc79b40c1489d1ea3bf" alt="sunflower" data-toggle="modal" data-target="#project2">
@@ -64,8 +64,8 @@
                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
                </div>
                <div class="modal-body">
-                   <img class="img-responsive" src="https://res.cloudinary.com/www-vetclass-nl/image/upload/t_detail_page/v1/pages/d5588f859664407eab2b791593e8629d.jpg" alt="puppy">
-                   This was my first project in this class. I learned a lot about HTML and CSS.
+                   <img class="img-responsive" src="img/project1.png" alt="movie_trailer_project">
+                   This was my first project in this class. I learned how to use python to create a static web page allowing visitors to browse movies and watch their trailers..
                </div>
                <div class="modal-footer">
                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
