updated project2 and cleaned up page

--- a/framework/index.html
+++ b/framework/index.html
@@ -15,11 +15,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <img class="title-logo" src="http://c6.la4.download.9appsinstall.com:7080/group1/M01/9E/6C/qYYBAFgpYz-ATPfMAAAIQ0fNInQ111.png" alt="logo">
+        <img class="title-logo" src="http://p5.zdassets.com/hc/settings_assets/1036605/200285828/YLDRxHhzxkRweU87GiHmCA-eI8YQBqroXYvQRUSWqfxEw-logomark.png" alt="logo">
       </div>
-      <div id="heading" class="col-md-6 text-right text-uppercase">
-        <h1 class="title-super text-thin">Jane Austin</h1>
-        <h4>Front End Developer</h4>
+      <div class="col-md-6 text-right text-uppercase">
+        <h1 class="title-super text-thin">Pat Sandoval</h1>
+        <h4>Front End Ninja</h4>
       </div>
     </div>
     <div class="row">
@@ -44,9 +44,9 @@
         <a href="https://github.com/patsand24/movie_trailer_site">hhttps://github.com/patsand24/movie_trailer_site</a>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive imgbox" src="https://drscdn.500px.org/photo/48611784/q%3D80_h%3D300/072ef5f89a630dc79b40c1489d1ea3bf" alt="sunflower" data-toggle="modal" data-target="#project2">
-        <h3 class="text-uppercase">Sunflower</h3>
-        <a href="https://github.com/patsand24">https://github.com/patsand24</a>
+        <img class="img-responsive imgbox" src="img/project2.png" alt="sunflower" data-toggle="modal" data-target="#project2">
+        <h3 class="text-uppercase">Portfolio Project</h3>
+        <a href="https://github.com/patsand24/CSS-Responsive">https://github.com/patsand24/CSS-Responsive</a>
       </div>
       <div class="col-md-4">
         <img class="img-responsive imgbox" src="https://drscdn.500px.org/photo/183992833/q%3D80_h%3D300/29a31d3ae4f94bc040c3428f37f0e294" alt="fjord" data-toggle="modal" data-target="#project3">
@@ -61,7 +61,7 @@
        <div class="modal-dialog">
            <div class="modal-content">
                <div class="modal-header">
-                   <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                   <h4 class="modal-title" id="myModalLabel">Movie Trailer Project</h4>
                </div>
                <div class="modal-body">
                    <img class="img-responsive" src="img/project1.png" alt="movie_trailer_project">
@@ -78,11 +78,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                    <h4 class="modal-title" id="myModalLabel">Portfolio Project</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="https://drscdn.500px.org/photo/48611784/q%3D80_h%3D300/072ef5f89a630dc79b40c1489d1ea3bf" alt="sunflower">
-                    This was my first project in this class. I learned a lot about HTML and CSS.
+                    <img class="img-responsive" src="img/project2.png" alt="sunflower">
+                    This was my Second project in this class. I learned a lot about HTML and CSS. This Project was created using bootstrap as a framework.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
