added more rows to index.html and re-formatted html

--- a/framework/index.html
+++ b/framework/index.html
@@ -37,9 +37,10 @@
         <h2 class="text-muted">Featured Work</h2>
       </div>
     </div>
+
     <div class="row text-center">
       <div class="col-md-4">
-        <img class="img-responsive imgbox" src="img/project1.png" alt="movie_trailer_project" data-toggle="modal" data-target="#project1">
+        <img class="img-responsive imgbox" src="img/project1.jpg" alt="movie_trailer_project" data-toggle="modal" data-target="#project1">
         <h3 class="text-uppercase">Movie Trailer Project</h3>
         <a href="https://github.com/patsand24/movie_trailer_site">hhttps://github.com/patsand24/movie_trailer_site</a>
       </div>
@@ -49,10 +50,35 @@
         <a href="https://github.com/patsand24/CSS-Responsive">https://github.com/patsand24/CSS-Responsive</a>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive imgbox" src="https://drscdn.500px.org/photo/183992833/q%3D80_h%3D300/29a31d3ae4f94bc040c3428f37f0e294" alt="fjord" data-toggle="modal" data-target="#project3">
-        <h3 class="text-uppercase">Bokeh</h3>
+        <img class="img-responsive imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project3">
+        <h3 class="text-uppercase">Multi-User Blog</h3>
         <a href="https://github.com/patsand24">https://github.com/patsand24</a>
       </div>
+    </div>
+
+    <div class="row text-center">
+      <div class="col-md-4">
+        <img class="img-responsive imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project1">
+        <h3 class="text-uppercase">Movie Trailer Project</h3>
+        <a href="https://github.com/patsand24/movie_trailer_site">hhttps://github.com/patsand24/movie_trailer_site</a>
+      </div>
+      <div class="col-md-4">
+        <img class="img-responsive imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project2">
+        <h3 class="text-uppercase">Portfolio Project</h3>
+        <a href="https://github.com/patsand24/CSS-Responsive">https://github.com/patsand24/CSS-Responsive</a>
+      </div>
+      <div class="col-md-4">
+        <img class="img-responsive imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project3">
+        <h3 class="text-uppercase">Multi-User Blog</h3>
+        <a href="https://github.com/patsand24">https://github.com/patsand24</a>
+      </div>
+    </div>
+
+    <div class="row text-center">
+      <div class="col-md-4">
+        <img class="img-responsive imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project1">
+        <h3 class="text-uppercase">Movie Trailer Project</h3>
+        <a href="https://github.com/patsand24/movie_trailer_site">hhttps://github.com/patsand24/movie_trailer_site</a>
     </div>
   </div>
 
@@ -95,7 +121,7 @@
          <div class="modal-dialog">
              <div class="modal-content">
                  <div class="modal-header">
-                     <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                     <h4 class="modal-title" id="myModalLabel">Multi-User Blog</h4>
                  </div>
                  <div class="modal-body">
                      <img class="img-responsive" src="https://drscdn.500px.org/photo/183992833/q%3D80_h%3D300/29a31d3ae4f94bc040c3428f37f0e294" alt="fjord">
