changed code to pass validation

--- a/framework/index.html
+++ b/framework/index.html
@@ -19,7 +19,7 @@
 
             <!-- logo -->
             <div class="col-md-6 mt-4">
-                <img src="http://p5.zdassets.com/hc/settings_assets/1036605/200285828/YLDRxHhzxkRweU87GiHmCA-eI8YQBqroXYvQRUSWqfxEw-logomark.png" alt="logo">
+                <img src="img/udacity.png" alt="logo">
             </div>
 
             <!-- heading -->
@@ -74,35 +74,35 @@
 
             <!-- Multi-User Blog Project -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project3">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project3">
                 <h2>Multi-User Blog Project</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Tournament Results -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project4">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project4">
                 <h2>Tournament Results</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Item Catalog Project -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project5">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project5">
                 <h2>Item Catalog Project</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Neighborhood Map -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project6">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project6">
                 <h2>Neighborhood Map</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Linux Server Configuration -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="http://placehold.it/555x300" alt="placeholder" data-toggle="modal" data-target="#project7">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project7">
                 <h2>Linux Server Configuration</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
@@ -111,14 +111,14 @@
     <!-- end container -->
 
     <!-- Modal Movie-Trailer -->
-    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Movie Trailer Project</h4>
+                    <h4 class="modal-title" id="myModalLabel1">Movie Trailer Project</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="img/project1.png" alt="movie_trailer_project">
+                    <img class="img-fluid" src="img/project1-min.png" alt="movie_trailer_project">
                     <p>This was my first project in this class. I learned how to use python to create a static web page allowing visitors to browse movies and watch their trailers.</p>
                 </div>
                 <div class="modal-footer">
@@ -129,14 +129,14 @@
     </div>
 
     <!-- Modal Portfolio -->
-    <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Portfolio Project</h4>
+                    <h4 class="modal-title" id="myModalLabel2">Portfolio Project</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="img/project2.png" alt="portfolio_project">
+                    <img class="img-fluid" src="img/project2-min.png" alt="portfolio_project">
                     <p>This was my Second project in this class. I learned a lot about HTML and CSS. This Project was created using bootstrap as a framework.</p>
                 </div>
                 <div class="modal-footer">
@@ -147,11 +147,11 @@
     </div>
 
     <!-- Modal Multi-User Blog -->
-    <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Multi-User Blog</h4>
+                    <h4 class="modal-title" id="myModalLabel3">Multi-User Blog</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
@@ -165,11 +165,11 @@
     </div>
 
     <!-- Modal Tournament Results -->
-    <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Tournament Results</h4>
+                    <h4 class="modal-title" id="myModalLabel4">Tournament Results</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
@@ -183,11 +183,11 @@
     </div>
 
     <!-- Modal Item Catalog -->
-    <div class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Item Catalog Project</h4>
+                    <h4 class="modal-title" id="myModalLabel5">Item Catalog Project</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
@@ -201,11 +201,11 @@
     </div>
 
     <!-- Modal Neighborhood Map -->
-    <div class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Neighborhood Map</h4>
+                    <h4 class="modal-title" id="myModalLabel6">Neighborhood Map</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
@@ -219,11 +219,11 @@
     </div>
 
     <!-- Modal Linux Server Configuration -->
-    <div class="modal fade" id="project7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="project7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel7" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Linux Server Configuration</h4>
+                    <h4 class="modal-title" id="myModalLabel7">Linux Server Configuration</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
