added semantic tags and more descriptive alt attributes to img tags

--- a/framework/index.html
+++ b/framework/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <!-- container -->
-        <div class="row">
+        <header class="row">
 
             <!-- logo -->
             <div class="col-md-6 mt-4">
@@ -27,7 +27,7 @@
                 <h1 class="title-super text-thin">Pat Sandoval</h1>
                 <h4>Front End Ninja</h4>
             </div>
-        </div>
+        </header>
 
         <!-- horizontal rule -->
         <div class="row">
@@ -39,7 +39,7 @@
         <!-- main-image -->
         <div class="row">
             <div class="col-md-12">
-                <img class="img-fluid" src="img/Palm_Beach.jpg" alt="beach">
+                <img class="img-fluid" src="img/Palm_Beach.jpg" alt="main page image of misty ocean.">
             </div>
         </div>
 
@@ -56,57 +56,57 @@
     <div class="container project-main">
 
         <!-- container -->
-        <div class="row">
+        <section class="row">
 
             <!-- Movie Trailer Project -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="img/project1-min.png" alt="placeholder" data-toggle="modal" data-target="#project1">
+                <img class="img-fluid mb-2 imgbox" src="img/project1-min.png" alt="screenshot of movie trailer project." data-toggle="modal" data-target="#project1">
                 <h2>Movie Trailer Project</h2>
                 <a class="pb-1" href="https://github.com/patsand24/movie_trailer_site">https://github.com/patsand24/movie_trailer_site</a>
             </div>
 
             <!-- Portfolio Project -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox project2" src="img/project2-min.png" alt="placeholder" data-toggle="modal" data-target="#project2">
+                <img class="img-fluid mb-2 imgbox project2" src="img/project2-min.png" alt="screenshot of portfolio project." data-toggle="modal" data-target="#project2">
                 <h2>Portfolio Project</h2>
                 <a class="pb-1" href="https://github.com/patsand24/CSS-Responsive">https://github.com/patsand24/CSS-Responsive</a>
             </div>
 
             <!-- Multi-User Blog Project -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project3">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder image" data-toggle="modal" data-target="#project3">
                 <h2>Multi-User Blog Project</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Tournament Results -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project4">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder image" data-toggle="modal" data-target="#project4">
                 <h2>Tournament Results</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Item Catalog Project -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project5">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder image" data-toggle="modal" data-target="#project5">
                 <h2>Item Catalog Project</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Neighborhood Map -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project6">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder image" data-toggle="modal" data-target="#project6">
                 <h2>Neighborhood Map</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
 
             <!-- Linux Server Configuration -->
             <div class="col-lg-4 col-md-6 text-center mb-4">
-                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder" data-toggle="modal" data-target="#project7">
+                <img class="img-fluid mb-2 imgbox" src="img/placeholder.png" alt="placeholder image" data-toggle="modal" data-target="#project7">
                 <h2>Linux Server Configuration</h2>
                 <a class="pb-1" href="https://github.com/patsand24">https://github.com/patsand24</a>
             </div>
-        </div>
+        </section>
     </div>
     <!-- end container -->
 
@@ -118,7 +118,7 @@
                     <h4 class="modal-title" id="myModalLabel1">Movie Trailer Project</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="img/project1-min.png" alt="movie_trailer_project">
+                    <img class="img-fluid" src="img/project1-min.png" alt="screenshot of movie trailer project.">
                     <p>This was my first project in this class. I learned how to use python to create a static web page allowing visitors to browse movies and watch their trailers.</p>
                 </div>
                 <div class="modal-footer">
@@ -136,7 +136,7 @@
                     <h4 class="modal-title" id="myModalLabel2">Portfolio Project</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="img/project2-min.png" alt="portfolio_project">
+                    <img class="img-fluid" src="img/project2-min.png" alt="screenshot of portfolio project.">
                     <p>This was my Second project in this class. I learned a lot about HTML and CSS. This Project was created using bootstrap as a framework.</p>
                 </div>
                 <div class="modal-footer">
@@ -154,7 +154,7 @@
                     <h4 class="modal-title" id="myModalLabel3">Multi-User Blog</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
+                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder image">
                     <p>Coming Soon!</p>
                 </div>
                 <div class="modal-footer">
@@ -172,7 +172,7 @@
                     <h4 class="modal-title" id="myModalLabel4">Tournament Results</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
+                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder image">
                     <p>Coming Soon!</p>
                 </div>
                 <div class="modal-footer">
@@ -190,7 +190,7 @@
                     <h4 class="modal-title" id="myModalLabel5">Item Catalog Project</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
+                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder image">
                     <p>Coming Soon!</p>
                 </div>
                 <div class="modal-footer">
@@ -208,7 +208,7 @@
                     <h4 class="modal-title" id="myModalLabel6">Neighborhood Map</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
+                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder image">
                     <p>Coming Soon!</p>
                 </div>
                 <div class="modal-footer">
@@ -226,7 +226,7 @@
                     <h4 class="modal-title" id="myModalLabel7">Linux Server Configuration</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder">
+                    <img class="img-fluid" src="http://placehold.it/555x300" alt="placeholder image">
                     <p>Coming Soon!</p>
                 </div>
                 <div class="modal-footer">
